Integration tests, add money detail in transactions
